<resources>
    <string name="app_name">Books</string>
    <string name="description_title">Descrizione</string>
    <string name="info_title">Informazioni bibliografiche</string>
    <string name="author_title">Autore</string>
    <string name="language_title">Lingua</string>
    <string name="subtitle_title">Sottotitolo</string>
    <string name="edition_title">Edizione</string>
    <string name="pages_title">Pagine</string>
    <string name="sting_book_title">Titolo</string>
    <string name="search_hint">Ricerca libro</string>
</resources>
