<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:indeterminate="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/all_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/cover_img_view"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="8dp" />

                <TextView
                    android:id="@+id/authors_txt_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@id/cover_img_view"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/title_txt_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/authors_txt_view"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@id/cover_img_view"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/publisher_txt_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_txt_view"
                    android:layout_margin="4dp"
                    android:layout_toEndOf="@id/cover_img_view"
                    android:textSize="16dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/description_title_txt_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/description_title"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description_txt_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/description_title_txt_view"
                    android:layout_margin="8dp"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/info_title_txt_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/description_txt_view"
                    android:layout_margin="8dp"
                    android:text="@string/info_title"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/info_title_txt_view"
                    android:layout_margin="8dp"
                    android:text="@string/author_title"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/authors_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/info_title_txt_view"
                    android:layout_margin="8dp"
                    android:layout_toEndOf="@id/author"
                    android:paddingStart="42dp"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/book_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/authors_bio"
                    android:layout_margin="8dp"
                    android:text="@string/sting_book_title"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/title_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/authors_bio"
                    android:layout_margin="8dp"
                    android:layout_toEndOf="@id/book_title"
                    android:paddingLeft="50dp"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_bio"
                    android:layout_margin="8dp"
                    android:text="@string/subtitle_title"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/subtitle_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_bio"
                    android:layout_margin="8dp"
                    android:layout_toEndOf="@id/subtitle"
                    android:paddingStart="10dp"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/edition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/subtitle_bio"
                    android:layout_margin="8dp"
                    android:text="@string/edition_title"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/edition_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/subtitle_bio"
                    android:layout_margin="8dp"
                    android:layout_toEndOf="@id/edition"
                    android:paddingStart="26dp"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edition_bio"
                    android:layout_margin="8dp"
                    android:text="@string/pages_title"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/pages_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edition_bio"
                    android:layout_margin="8dp"
                    android:layout_toEndOf="@id/pages"
                    android:paddingStart="40dp"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pages_bio"
                    android:layout_margin="8dp"
                    android:text="@string/language_title"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/language_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pages_bio"
                    android:layout_margin="8dp"
                    android:layout_toEndOf="@id/language"
                    android:paddingStart="40dp"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>